<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@drawable/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculator"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/edtNumber1"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:autofillHints=""
        android:inputType="number"
        android:textColor="@color/white"
        android:layout_marginTop="24dp"
        android:hint="@string/enter_number"
        android:textColorHint="@color/white"
        android:background="@drawable/view_background"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/edtNumber2"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:autofillHints=""
        android:inputType="number"
        android:textColor="@color/white"
        android:layout_marginTop="24dp"
        android:hint="@string/enter_number"
        android:textColorHint="@color/white"
        android:background="@drawable/view_background"
        app:layout_constraintTop_toBottomOf="@+id/edtNumber1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="32dp"
            android:background="@drawable/view_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edtNumber2">

            <RadioButton
                android:id="@+id/additionBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="8dp"
                android:text="@string/addition"
                android:textSize="32sp"
                android:textColor="@color/white" />

            <RadioButton
                android:id="@+id/subtractionBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="8dp"
                android:text="@string/subtraction"
                android:textSize="32sp"
                android:textColor="@color/white" />

            <RadioButton
                android:id="@+id/multiplicationBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="8dp"
                android:text="@string/multiplication"
                android:textSize="32sp"
                android:textColor="@color/white" />

            <RadioButton
                android:id="@+id/divisionBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="8dp"
                android:text="@string/division"
                android:textSize="32sp"
                android:textColor="@color/white" />

        </RadioGroup>

    <Button
        android:id="@+id/btnCalculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:onClick="calculateResult"
        android:text="@string/calculate"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result_will_be_display_here"
        android:textSize="22sp"
        android:textColor="@color/white"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/btnCalculate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        android:background="@drawable/view_background" />

</androidx.constraintlayout.widget.ConstraintLayout>